[gd_scene load_steps=2 format=2]

[ext_resource path="res://Classes/UI/TextChat.gd" type="Script" id=1]

[node name="TextChat" type="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -192.0
margin_right = 200.0
margin_bottom = -8.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.670588 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatHistory" type="RichTextLabel" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
text = "
"
scroll_following = true
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="visibility_changed" from="LineEdit" to="." method="_on_LineEdit_visibility_changed"]
